<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/addSecondaryContacts"
    tools:context=".contacts.AddSecondaryContacts">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorTextPrimary"
        android:layout_marginEnd="10sp">
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/secondary_contacts"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="20sp">
    </TextView>
    <androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contactsRecycleView"
    android:tag="sdf"
    tools:listitem="@layout/contacts_list_layout"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contacts"
        android:backgroundTint="@color/colorTextPrimary"
        android:id="@+id/addContacts" />

</LinearLayout>
</ScrollView>